--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.13.0'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
     implementation 'androidx.preference:preference-ktx:1.2.1'
-    implementation project(path: ':lib')
+    implementation "ezt.documents:libreoffice:1.0.0-beta5"
+
+//    implementation project(path: ':lib')
 
     // https://stackoverflow.com/questions/75263047/duplicate-class-in-kotlin-android
     constraints {
