--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -58,6 +58,11 @@ android {
         exclude 'META-INF/AL2.0'
         exclude 'META-INF/LGPL2.1'
         exclude 'assets/webkit/**'
+        // Exclude libandroidapp.so as it will be loaded from zip in assets
+        exclude 'lib/arm64-v8a/libandroidapp.so'
+        exclude 'lib/armeabi-v7a/libandroidapp.so'
+        exclude 'lib/x86/libandroidapp.so'
+        exclude 'lib/x86_64/libandroidapp.so'
         merge '**/LICENSE'
         merge '**/LICENSE.txt'
         merge '**/NOTICE'
@@ -117,14 +122,13 @@ dependencies {
         }
     }
 }
-
 afterEvaluate {
     publishing {
         publications {
             release(MavenPublication) {
                 groupId = "ezt.documents"
                 artifactId = "libreoffice"
-                version = "1.0.0-beta7"
+                version = "1.0.0-beta11"
 
                 artifact(tasks.getByName("bundleReleaseAar"))
 
