--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,9 +93,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.13.0'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
     implementation 'androidx.preference:preference-ktx:1.2.1'
-//    implementation "ezt.documents:libreoffice:1.0.0-beta9"
+    implementation "ezt.documents:libreoffice:1.0.0-beta13"
 
-    implementation project(path: ':lib')
+//    implementation project(path: ':lib')
 
     // https://stackoverflow.com/questions/75263047/duplicate-class-in-kotlin-android
     constraints {
