--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -25,8 +25,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
-            // proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
             zipAlignEnabled true
             debuggable false
@@ -119,7 +119,7 @@ afterEvaluate {
             release(MavenPublication) {
                 groupId = "ezt.documents"
                 artifactId = "libreoffice"
-                version = "1.0.0-beta2"
+                version = "1.0.0-beta4"
 
                 artifact(tasks.getByName("bundleReleaseAar"))
 
@@ -134,6 +134,13 @@ afterEvaluate {
                             dependencyNode.appendNode('scope', 'compile')
                         }
                     }
+
+                    // Add Facebook Shimmer dependency explicitly
+                    def shimmerDep = dependenciesNode.appendNode('dependency')
+                    shimmerDep.appendNode('groupId', 'com.facebook.shimmer')
+                    shimmerDep.appendNode('artifactId', 'shimmer')
+                    shimmerDep.appendNode('version', '0.5.0')
+                    shimmerDep.appendNode('scope', 'compile')
                 }
             }
         }
@@ -142,8 +149,8 @@ afterEvaluate {
                 name = "TanhB02"
                 url = uri("https://maven.pkg.github.com/TanhB02/EZT_Office")
                 credentials {
-                    username = System.getenv("GITHUB_ACTOR") ?: project.properties["gpr.user"] as String
-                    password = System.getenv("GITHUB_TOKEN") ?: project.properties["gpr.token"] as String
+                    username = "TanhB02"
+                    password = "***REMOVED***"
                 }
             }
         }
