--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,10 +93,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.13.0'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
     implementation 'androidx.preference:preference-ktx:1.2.1'
-    implementation("ezt.documents:libreoffice:1.0.0-beta4")
+//    implementation("ezt.documents:libreoffice:1.0.0-beta4")
 
 
-//    implementation project(path: ':lib')
+    implementation project(path: ':lib')
     implementation 'com.google.android.gms:play-services-measurement-api:23.0.0'
     implementation 'com.google.android.gms:play-services-ads-api:24.7.0'
 
