--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,108 +26,18 @@
         android:supportsRtl="true"
         android:theme="@style/LibreOfficeTheme">
 
-
-        <!-- Document Browser Activity -->
+        <!-- Main Application Activity -->
         <activity
             android:name=".ui.MainActivity"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden|uiMode"
-            android:exported="true"
-            android:process=":loactivity">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity
-            android:name="org.libreoffice.androidlib.LOActivity"
-            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
-            android:launchMode="singleTask"
-            android:exported="true">
-
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <action android:name="android.intent.action.EDIT" />
-                <action android:name="android.intent.action.PICK" />
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data android:scheme="file" />
-                <data android:scheme="content" />
-
-                <!-- OOXML: DOCX / XLSX / PPTX -->
-                <data android:mimeType="application/vnd.openxmlformats-officedocument.wordprocessingml.document" />
-                <data android:mimeType="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
-                <data android:mimeType="application/vnd.openxmlformats-officedocument.presentationml.presentation" />
-                <data android:mimeType="application/vnd.openxmlformats-officedocument.presentationml.slideshow" />
-
-                <!-- OOXML templates -->
-                <data android:mimeType="application/vnd.openxmlformats-officedocument.wordprocessingml.template" />
-                <data android:mimeType="application/vnd.openxmlformats-officedocument.spreadsheetml.template" />
-                <data android:mimeType="application/vnd.openxmlformats-officedocument.presentationml.template" />
-
-                <!-- Legacy Microsoft -->
-                <data android:mimeType="application/msword" />
-                <data android:mimeType="application/vnd.ms-excel" />
-                <data android:mimeType="application/vnd.ms-powerpoint" />
-
-                <!-- OTHER -->
-                <data android:mimeType="application/pdf" />
-                <data android:mimeType="text/plain" />
-            </intent-filter>
-
-            <!-- ChromeOS and file manager support based on file extension -->
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <action android:name="android.intent.action.EDIT" />
-                <action android:name="android.intent.action.PICK" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data android:scheme="file" />
-                <data android:scheme="content" />
-                <data android:host="*" />
-                <data android:mimeType="*/*" />
-
-                <!-- DOCX -->
-                <data android:pathPattern=".*\\.docx" />
-                <data android:pathPattern=".*\\..*\\.docx" />
-                <data android:pathPattern=".*\\..*\\..*\\.docx" />
-                <data android:pathPattern=".*\\..*\\..*\\..*\\.docx" />
-                <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\.docx" />
-                <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\..*\\.docx" />
-                <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\..*\\..*\\.docx" />
-
-                <!-- XLSX -->
-                <data android:pathPattern=".*\\.xlsx" />
-                <data android:pathPattern=".*\\..*\\.xlsx" />
-                <data android:pathPattern=".*\\..*\\..*\\.xlsx" />
-                <data android:pathPattern=".*\\..*\\..*\\..*\\.xlsx" />
-                <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\.xlsx" />
-                <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\..*\\.xlsx" />
-                <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\..*\\..*\\.xlsx" />
-
-                <!-- PPTX -->
-                <data android:pathPattern=".*\\.pptx" />
-                <data android:pathPattern=".*\\..*\\.pptx" />
-                <data android:pathPattern=".*\\..*\\..*\\.pptx" />
-                <data android:pathPattern=".*\\..*\\..*\\..*\\.pptx" />
-                <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\.pptx" />
-                <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\..*\\.pptx" />
-                <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\..*\\..*\\.pptx" />
-            </intent-filter>
-        </activity>
-
-        <service
-            android:name="org.libreoffice.androidlib.LOActivityService"
-            android:process=":loactivity"
-            android:exported="false" />
-
-        <activity
-            android:name="org.libreoffice.androidlib.LOActivityLauncher"
-            android:process=":loactivity"
-            android:exported="true"
-            android:theme="@android:style/Theme.NoDisplay" />
-
+        <!-- FileProvider for sharing files -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
@@ -138,6 +48,7 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
+        <!-- Google Ads Application ID -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-1819777390752592~1922350476" />
