--- a/lib/src/main/AndroidManifest.xml
+++ b/lib/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 
     <application>
         <provider
-            android:name="org.libreoffice.androidlib.WebViewInitProvider"
+            android:name="org.libreoffice.androidlib.provider.WebViewInitProvider"
             android:authorities="${applicationId}.webview_init_provider"
             android:exported="false"
             android:process=":loactivity" />
